--- a/src/app/components/cotizador/cotizador.component.html
+++ b/src/app/components/cotizador/cotizador.component.html
@@ -12,11 +12,14 @@
                         </div>
                         <div class="form-group col-12 col-sm-11 col-md-10 mb-0">
                             <label class="text-white ml-3">Filtrado de estudios</label>
-                            <input type="text" class="form-control rounded-pill col-12" placeholder="Escribe para buscar">
+                            <input (input)="filterByName($event.target.value)" type="text" list="estudios" class="form-control rounded-pill col-12" placeholder="Escribe para buscar">
+                            <!-- <datalist id="estudios" class="ui-datalist-data">
+                                <option *ngFor="let estudio of estudios" [label]="estudio.precio">{{ estudio.nombre }}</option>
+                            </datalist> -->
                         </div>
                     </div>
                 </form>
-                <div class="container">
+                <div class="container" *ngIf="estudiosFilter.length === 0">
                     <div class="row">
                         <div class="col-12 col-sm-11 col-md-10">
                             <h1 class="font-weight-bold text-white-50 my-0 ml-5">SIN</h1>
@@ -24,41 +27,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid">
+                <div class="container-fluid my-5" *ngIf="estudiosFilter">
                     <div class="row">
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-sm-6 col-md-4" *ngFor="let estudio of estudiosFilter">
                             <div class="card bg-light mb-3 rounded-top">
                                 <div class="card-body border-bottom name-treatment p-2">
-                                    <p class="font-weight-bold border-bottom mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
-                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">$430</p>
+                                    <p class="font-weight-bold border-bottom mb-0">{{ estudio.nombre }}</p>
+                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">{{ estudio.precio | currency: 'MXN' }}</p>
                                 </div>
                                 <div class="card-header border-bottom-0 text-right p-0">
                                     <span class="add-title">AGREGAR</span>
-                                    <button class="button-add">+</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4">
-                            <div class="card bg-light mb-3 rounded-top">
-                                <div class="card-body border-bottom name-treatment p-2">
-                                    <p class="font-weight-bold border-bottom mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
-                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">$430</p>
-                                </div>
-                                <div class="card-header border-bottom-0 text-right p-0">
-                                    <span class="add-title">AGREGAR</span>
-                                    <button class="button-add">+</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4">
-                            <div class="card bg-light mb-3 rounded-top">
-                                <div class="card-body border-bottom name-treatment p-2">
-                                    <p class="font-weight-bold border-bottom mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
-                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">$430</p>
-                                </div>
-                                <div class="card-header border-bottom-0 text-right p-0">
-                                    <span class="add-title">AGREGAR</span>
-                                    <button class="button-add">+</button>
+                                    <button (click)="agregarEstudio( estudio )" class="button-add">+</button>
                                 </div>
                             </div>
                         </div>
@@ -75,7 +54,7 @@
                 </div>
                 <div class="row my-3">
                     <div class="col-12 border-bottom">
-                        <label class="">NOMBRE: {{ nombre }}</label>
+                        <label class=""><span class="text-muted">NOMBRE:</span> {{ nombre }}</label>
                     </div>
                 </div>
                 <div class="row">
@@ -84,26 +63,26 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12" *ngIf="estudiosSeleccionados.length === 0">
                         <p class="text-center text-muted">No se han agregado estudios</p>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12" *ngIf="estudiosSeleccionados">
                         <div class="card-body border-bottom name-treatment p-2">
-                            <div class="row">
+                            <div class="row" *ngFor="let estudioSeleccionado of estudiosSeleccionados">
                                 <div class="col-8">
                                     <div class="row">
-                                        <p class="font-weight-bold mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
+                                        <p class="font-weight-bold mb-0">{{ estudioSeleccionado.nombre }}</p>
                                     </div>
                                     <div class="row">
-                                        <span class="text-blue font-weight-bold">Condiciones</span>
-                                        <span>Muestra de heces reciente  (menos de una hora)</span>
+                                        <span class="text-blue font-weight-bold col-12">Condiciones</span>
+                                        <span>{{ estudioSeleccionado.condiciones }}</span>
                                     </div>
                                 </div>
                                 <div class="col-3">
-                                    <p class="font-weight-bold mb-0 mt-1 text-danger h5 text-right">$4930.00</p>
+                                    <p class="font-weight-bold mb-0 mt-1 text-danger h5 text-right">{{ estudioSeleccionado.precio | currency }}</p>
                                 </div>
                                 <div class="col-1">
-                                    <button class="btn badge badge-danger font-weight-bold rounded-circle">X</button>
+                                    <button class="btn badge badge-danger font-weight-bold rounded-circle" (click)="removerEstudio( estudioSeleccionado.id_estudio )">X</button>
                                 </div>
                             </div>
                         </div>
@@ -111,12 +90,12 @@
                 </div>
                 <div class="row my-3">
                     <div class="col-12">
-                        <h3 class="font-weight-bold text-right my-0"><span class="mx-2 text-muted">Total:</span> <span class="text-danger">$10,000.00</span></h3>
+                        <h3 class="font-weight-bold text-right my-0"><span class="mx-2 text-muted">Total:</span> <span class="text-danger">{{ costoEstudios | currency }}</span></h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <button class="btn btn-primary col-12 rounded-pill">Descargar</button>
+                        <button class="btn btn-primary col-12 rounded-pill" (click)="crearPdf()">Descargar</button>
                     </div>
                     <div class="col-6">
                         <button class="btn btn-danger col-12 rounded-pill">Imprimir</button>
